[gd_scene load_steps=5 format=2]

[ext_resource path="res://structures/ResourceStats.tscn" type="PackedScene" id=1]
[ext_resource path="res://structures/ResourceCollectArea.tscn" type="PackedScene" id=2]
[ext_resource path="res://structures/CollectableResource.gd" type="Script" id=3]
[ext_resource path="res://target/TargetButton.tscn" type="PackedScene" id=4]

[node name="CollectableResource" type="Node2D"]
script = ExtResource( 3 )

[node name="ResourceStats" parent="." instance=ExtResource( 1 )]

[node name="ResourceCollectArea" parent="." instance=ExtResource( 2 )]
collision_layer = 64
collision_mask = 0

[node name="TargetButton" parent="." instance=ExtResource( 4 )]

[node name="LabelController" type="Control" parent="."]
margin_top = -14.0
margin_right = 30.0
margin_bottom = -2.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[connection signal="no_resource_left" from="ResourceStats" to="." method="_on_ResourceStats_no_resource_left"]
[connection signal="resource_changed" from="ResourceStats" to="." method="_on_ResourceStats_resource_changed"]
[connection signal="mouse_entered" from="TargetButton" to="." method="_on_TargetButton_mouse_entered"]
[connection signal="mouse_exited" from="TargetButton" to="." method="_on_TargetButton_mouse_exited"]
[connection signal="pressed" from="TargetButton" to="." method="_on_TargetButton_pressed"]

[editable path="ResourceCollectArea"]
[editable path="TargetButton"]
